--- a/src/main/twirl/helper/activities.scala.html
+++ b/src/main/twirl/helper/activities.scala.html
@@ -5,6 +5,9 @@
 @if(activities.isEmpty){
   No activity
 } else {
+  <div style="text-align:right;">
+    <a href="@path/activities.atom"><img src="@assets/common/images/feed.png" alt="activities"></a>
+  </div>
   @activities.map { activity =>
     <div class="block">
       @(activity.activityType match {
@@ -58,7 +61,6 @@
     </div>
   }
 }
-
 @detailActivity(activity: model.Activity, image: String) = {
   <div class="activity-icon-large"><img src="@assets/common/images/@image"/></div>
   <div class="activity-content">
